--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
   <div class="aaa">
-    <img src="./eisenhower-matrix.jpg"><a class="more_inf"
-      href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </div>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
@@ -27,8 +26,7 @@
         <button class="delete"><img src="./remove.svg"></button>
       </li>
       <li class="editMode">
-        <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping"
-          class="task">
+        <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
