--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 
 <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg"><a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+  <div class="header">
+    <img src="./eisenhower-matrix.jpg"><a class="details-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </div>
-  <div class="main-page-element_centered">
-    <p id="topSectionForAddingElementToList">
+  <div class="main">
+    <p id="adding-section">
       <label for="new-task">Add Item</label>
-      <div class="task__row-wrapper">
-        <input id="new-task" class="task" type="text"><button>Add</button>
+      <div class="add-task-wrapper">
+        <input id="new-task" class="add-task" type="text"><button>Add</button>
       </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="incomplete-tasks">
       <li>
         <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task">
         <button class="edit">Edit</button>
         <button class="delete"><img src="./remove.svg"></button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task">
         <button class="edit">Save</button>
         <button class="delete"><img src="./remove.svg"></button>
