--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="header">
-    <img src="./eisenhower-matrix.jpg"><a class="details-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <img src="./eisenhower-matrix.jpg"><a class="detail-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
   </div>
   <div class="main">
     <p id="adding-section">
