--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
   </div>
   <div class="main">
     <p id="adding-section">
-      <label for="new-task">Add Item</label>
+      <label class="tasks-label new-task-label" for="new-task">Add Item</label>
       <div class="add-task-wrapper">
-        <input id="new-task" class="add-task" type="text"><button>Add</button>
+        <input id="new-task" class="tasks-input inputadd-task" type="text"><button class="tasks-btn">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
+    <h3 class="title">Todo</h3>
     <ul id="incomplete-tasks">
-      <li>
-        <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="tasks__item">
+        <input class="tasks-input" type="checkbox"><label class="tasks-label">Pay Bills</label><input type="text" class="tasks-input">
+        <button class="tasks-btn edit">Edit</button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg"></button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="tasks__item edit-mode">
+        <input class="tasks-input" type="checkbox"><label class="tasks-label">Go Shopping</label><input type="text" value="Go Shopping" class="tasks-input">
+        <button class="tasks-btn edit">Save</button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="title">Completed</h3>
     <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="tasks__item">
+        <input class="tasks-input" type="checkbox" checked><label class="tasks-label">See the Doctor</label><input type="text" class="tasks-input">
+        <button class="tasks-btn edit">Edit</button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
