--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-  <div class="header">
+  <header class="header">
     <img class="header-img" src="./eisenhower-matrix.jpg"><a class="detail-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <p id="adding-section">
       <label class="tasks-label new-task-label" for="new-task">Add Item</label>
       <div class="add-task-wrapper">
@@ -39,7 +39,7 @@
         <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 
