--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix"><a class="detail-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?;</a>
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix"><a class="detail-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <p id="adding-section">
@@ -23,12 +23,12 @@
       <li class="tasks__item">
         <input class="tasks-input" type="checkbox"><label class="tasks-label">Pay Bills</label><input type="text" class="tasks-input">
         <button class="tasks-btn edit">Edit</button>
-        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt=""></button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt="Delete icon"></button>
       </li>
       <li class="tasks__item edit-mode">
         <input class="tasks-input" type="checkbox"><label class="tasks-label">Go Shopping</label><input type="text" value="Go Shopping" class="tasks-input">
         <button class="tasks-btn edit">Save</button>
-        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt=""></button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt="Delete icon"></button>
       </li>
     </ul>
     <h3 class="title">Completed</h3>
@@ -36,7 +36,7 @@
       <li class="tasks__item">
         <input class="tasks-input" type="checkbox" checked><label class="tasks-label">See the Doctor</label><input type="text" class="tasks-input">
         <button class="tasks-btn edit">Edit</button>
-        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt=""></button>
+        <button class="tasks-btn delete"><img class="delete-icon" src="./remove.svg" alt="Delete icon"></button>
       </li>
     </ul>
   </main>
